# egg-problem-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: egg_problem_benchmark.cpp
src/: egg_problem.cpp  egg_problem.h  main.cpp
tests/: egg_problem_test.cpp
